# fal-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_fal.py  benchmark_faceswap.py  nginx.conf  pyproject.toml  railway.toml  start.sh
.github/workflows/: build-lucent-base-cpu.yml  build-lucent-base-gpu.yml  build-lucent-controller.yml  docker-publish.yml  lucent-echo-publish.yml  publish-lucent-wheel.yml
core/: __init__.py  compose.py  face_swap.py  perception.py  room.py  yolo.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
lucent-serverless/: pyproject.toml
lucent-serverless-controller/: Dockerfile  pyproject.toml
lucent-serverless-controller/lucent_serverless_controller/: code_store.py  dashboard.html  db.py  jobs.py  main.py  package_store.py  reaper.py  resolver.py  scheduler.py  webhook.py
lucent-serverless-controller/tests/: test_db_jobs.py  test_jobs_api.py  test_scheduler_jobs.py  test_webhook.py
lucent-serverless/examples/echo/: Dockerfile  app.py
lucent-serverless/images/cpu/: Dockerfile  entrypoint.sh
lucent-serverless/images/gpu/: Dockerfile  entrypoint.sh
lucent-serverless/lucent_serverless/: __init__.py  job_runner.py  runner.py  runpod_client.py  state.py  watchdog.py
lucent-serverless/lucent_serverless/cli/: __init__.py  deploy.py  spawn.py  terminate.py
notes/: decisions.md  lucent_serverless_architecture.md  yolo_py_excerpts.md
scripts/: patch-fal-app-metadata.py  verify_gpu_paste_back_math.py
upstream-fal-demos/fal_demos/video/matrix_webrtc/: README.md  matrix.py  matrix_client.py
upstream-fal-demos/fal_demos/video/matrix_webrtc/frontend/: index.html  vite.config.js
upstream-fal-demos/fal_demos/video/matrix_webrtc/frontend/src/: main.js
upstream-fal-demos/fal_demos/video/webrtc/: README.md  webrtc.py  webrtc_client.py
upstream-fal-demos/fal_demos/video/webrtc/frontend/: index.html  package-lock.json  package.json  vite.config.js
upstream-fal-demos/fal_demos/video/webrtc/frontend/src/: main.js  style.css
upstream-fal-demos/fal_demos/video/yolo_webcam_webrtc/: README.md  yolo.py  yolo_client.py
upstream-fal-demos/fal_demos/video/yolo_webcam_webrtc/frontend/src/: main.js
