[project]
name = "multi-perception-webrtc"
version = "0.1.0"
description = "Three perceptual models (YOLO + Depth Anything V2 + SegFormer) co-located on a single warm fal Serverless runner, driving a WebRTC webcam stream."
requires-python = ">=3.10"

dependencies = [
    "fal",
    # WebRTC transport
    "aiortc",
    "av",
    "opencv-python",
    # YOLO
    "ultralytics",
    # Depth Anything V2 + SegFormer
    "torch",
    "torchvision",
    "transformers",
    "pillow",
    # Face swap
    "insightface",
    "onnxruntime",
    "huggingface_hub",
    "gfpgan",
    # GPU post-processing for inswapper paste_back (Dockerfile installs the
    # CUDA-12 wheel; pyproject lists the meta package so local CPU dev still
    # resolves cleanly via the optional fall-back path in face_swap.py).
    "cupy-cuda12x; platform_system == 'Linux'",
    # Shared
    "pydantic>=2.0",
    "numpy<2",
]

[tool.fal]
# placeholder for any fal-cli config that the CLI picks up
