[project]
name = "lucent-serverless"
version = "0.1.0"
description = "A small serverless realtime platform on RunPod — a learning rebuild of fal.realtime."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.35",
    "websockets>=13,<15",
    "httpx>=0.27,<0.30",
    "python-dotenv>=1.0,<2.0",
]

[project.scripts]
lucent-deploy = "lucent_serverless.cli.deploy:main"
lucent-spawn = "lucent_serverless.cli.spawn:main"
lucent-terminate = "lucent_serverless.cli.terminate:main"
lucent-runner = "lucent_serverless.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lucent_serverless"]
